# bio_ANNa

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Project File Structure  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: navigation_params.yaml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
launch/: system.launch.py
notebooks/: 1_data_analysis.ipynb  2_snn_visualization.ipynb
resource/: bio_anna
src/bio_anna/nodes/: antbot_snn_odometry_node.py  data_collection_node.py  gridcore_snn_mapper_node.py  hardware_interface_node.py  navigation_control_node.py
src/bio_anna/scripts/: run_full_experiment.py
src/bio_anna/utils/: bayesian_fusion_engine.py  loihi_interface.py  math_utils.py
